--- a/index.html
+++ b/index.html
@@ -6,34 +6,102 @@
   <script src="font-fit.js"></script>
   <style>
 
+    * { box-sizing: border-box; }
+
     body {
-      font: italic 24px Arial;
+      font: 24px Arial;
+      background: #222;
+      color: #eee;
+      margin: 0;
     }
 
-    #el1 {
-      width: 400px;
+    header {
+      position: absolute;
+      right: 0;
+      left: 0;
+      top: 0;
+      z-index: 1;
+
+      display: flex;
+      padding: 20px;
+    }
+
+    input {
+      display: block;
+      background: #151515;
+      border: 0;
+      color: #666;
+      font-size: 16px;
+
+      width: 100%;
+      padding: 8px 14px;
+
+      border-radius: 4px 0 0 4px;
+    }
+
+    button {
+      display: block;
+      vertical-align: top;
+      background: #444;
+      border: 0;
+      color: #fff;
+      font-size: 17px;
+      letter-spacing: 1px;
+      line-height: 1;
+      padding: 8px 11px;
+      border-radius: 0 4px 4px 0;
+
+    }
+
+    section {
+      position: absolute;
+      left: 0;
+      top: -3%;
+      width: 100%;
+      height: 100%;
+
+      display: flex;
+      align-items: center;
+      padding: 20px;
+    }
+
+    h1 {
+      width: 100%;
       white-space: nowrap;
-      font-weight: normal;
       text-overflow: ellipsis;
       overflow: hidden;
+      text-align: center;
     }
 
   </style>
 </head>
 
 <body>
-  <h1 id="el1">really long title really really really really long title</h1>
+  <header>
+    <input id="input" value="font-fit.js">
+    <button id="button">Fit</button>
+  </header>
+  <section>
+    <h1 id="el"></h1>
+  </section>
+
   <script>
-    (function() {
-      var FontFit = window['font-fit'];
-      var fontFit = new FontFit(el1, {
-        font: 'italic 24px arial',
-        width: 400
+    var fontFit = window['font-fit'];
+
+    function run() {
+      el.textContent = input.value;
+      var result = fontFit({
+        text: el.textContent,
+        font: 'bold 24px sans-serif',
+        space: el.clientWidth,
+        max: 200
       });
 
-      fontFit.calc();
-      fontFit.set();
-    })();
+      el.style.fontSize = result.fontSize + 'px';
+    }
+
+    run();
+    button.onclick = run;
   </script>
 </body>
 </html>
